Disable "fast trap" handlers which invoke software interrupts in sparc/amd7930intr.s and sparc/bsd_fdintr.s until they are rewritten to adapt new MI softint(9) API.

No particular comments on PR port-sparc/42192, but
this fixes timeout problem on floppy access on my SPARCstation 1+.

XXX: floppy support on sun4m seems to have another problem (data overrun).